--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
         <div>
             <h4>HomeStretch Redesign</h4>
             <p class="projecttext">This redesign was for a non-profit called HomeStretch. After speaking with their stakeholders, we were told they were having trouble obtaining donations recently. Our goal here was to deliver an easier way for their donors to make contributions.</p>
-            <button onclick="window.location.href='https://www.figma.com/proto/oZHbHamFYtEghAywjLpMaT/Home-Stretch-Redesign?node-id=942%3A2&scaling=scale-down';">View Project</button>
+            <button onclick="window.location.href='https://www.figma.com/proto/oZHbHamFYtEghAywjLpMaT/Home-Stretch-Redesign?node-id=942%3A2&scaling=scale-down';">View Prototype</button>
+            <button onclick="window.location.href='https://glucero1975.github.io/UX_UI_HW_20/';">View Case Study</button>
         </div>
     </div>
 ​                          
